@@ -9,8 +9,10 @@ import com.example.diplom33.repositories.EmployeeRepository;
 import com.example.diplom33.repositories.TaskRepository;
 import com.example.diplom33.repositories.UserRepository;
 import lombok.AllArgsConstructor;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.annotation.PathVariable;
 
 import java.security.Principal;
 import java.time.Duration;
@@ -18,6 +20,7 @@ import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,87 +32,57 @@ public class TaskService {
     private final TaskRepository taskRepository;
     private final EmployeeRepository employeeRepository;
 
-
-
-//    @Transactional
-//    public Optional<List<TaskGetDTO>> getAllTasksForUser(Principal principal) {
-//        String phone = principal.getName();
-//        User user = userRepository.findByPhone(phone).orElse(null);
-//        updateAllTaskStatus();
-//
-//        List<Task> tasks = taskRepository.findByEmployeeRecipientAndStatusIn(user.getEmployee(), Arrays.asList(TaskStatus.IN_PROGRESS, TaskStatus.EXPIRED)).orElse(null);
-//            return Optional.of(tasks.stream()
-//                    .map(this::convertToTaskGetDTO)
-//                    .collect(Collectors.toList()));
-//
-//    }
-
     @Transactional
     public Optional<List<TaskGetDTO>> getAllTasksForUser(Principal principal, String status) {
         String phone = principal.getName();
         User user = userRepository.findByPhone(phone).orElse(null);
         updateAllTaskStatus();
 
-        List<TaskStatus> targetStatuses = switch (status) {
-            case "in_progress" -> Arrays.asList(TaskStatus.IN_PROGRESS, TaskStatus.EXPIRED);
-            case "completed" -> List.of(TaskStatus.COMPLETED);
-            default -> null;
+        List<Task> tasks = switch (status) {
+            case "in_progress" ->
+                    taskRepository.findByEmployeeRecipientAndStatusIn(user.getEmployee(), Arrays.asList(TaskStatus.IN_PROGRESS, TaskStatus.EXPIRED)).orElse(null);
+            case "completed" ->
+                    taskRepository.findByEmployeeRecipientAndStatusIn(user.getEmployee(), List.of(TaskStatus.COMPLETED)).orElse(null);
+            case "produce" -> taskRepository.findByEmployeeProducer(user.getEmployee()).orElse(null);
+            default -> throw new IllegalArgumentException("Invalid status: " + status);
         };
-        List<Task> tasks = taskRepository.findByEmployeeRecipientAndStatusIn(user.getEmployee(), targetStatuses).orElse(null);
 
-        return Optional.ofNullable(tasks).map(taskList ->
-                taskList.stream()
-                        .map(this::convertToTaskGetDTO)
-                        .collect(Collectors.toList())
-        );
-
+        return Optional.ofNullable(tasks)
+                .map(taskList ->
+                        taskList.stream()
+                                .map(this::convertToTaskGetDTO)
+                                .collect(Collectors.toList())
+                );
     }
 
+    @Transactional
+    public Optional<List<TaskGetDTO>> getAllTasksForAdmin(long id, String status) {
+        updateAllTaskStatus();
 
+        List<Task> tasks = switch (status) {
+            case "in_progress" -> (id == -1) ?
+                    taskRepository.findByStatusIn(Arrays.asList(TaskStatus.IN_PROGRESS, TaskStatus.EXPIRED)).orElse(null) :
+                    taskRepository.findByEmployeeRecipientAndStatusIn(employeeRepository.findById(id).orElse(null), Arrays.asList(TaskStatus.IN_PROGRESS, TaskStatus.EXPIRED)).orElse(null);
+            case "completed" -> (id == -1) ?
+                    taskRepository.findByStatusIn(List.of(TaskStatus.COMPLETED)).orElse(null) :
+                    taskRepository.findByEmployeeRecipientAndStatusIn(employeeRepository.findById(id).orElse(null), List.of(TaskStatus.COMPLETED)).orElse(null);
+            case "produce" -> (id == -1) ?
+                    taskRepository.findByStatusIn(Arrays.asList(TaskStatus.IN_PROGRESS, TaskStatus.EXPIRED)).orElse(null) :
+                    taskRepository.findByEmployeeProducer(employeeRepository.findById(id).orElse(null)).orElse(null);
+            default -> throw new IllegalArgumentException("Invalid status: " + status);
+        };
 
-//    public Optional<List<TaskGetDTO>> getAllTasksForUser(Principal principal,
-//                                                         @RequestParam(name = "status", required = true) String status) {
-//        String phone = principal.getName();
-//        User user = userRepository.findByPhone(phone).orElse(null);
-//        updateAllTaskStatus();
-//
-//        List<TaskStatus> targetStatuses;
-//        switch (status) {
-//            case "in_progress":
-//                targetStatuses = Arrays.asList(TaskStatus.IN_PROGRESS, TaskStatus.EXPIRED);
-//                break;
-//            case "completed":
-//                targetStatuses = List.of(TaskStatus.COMPLETED);
-//                break;
-//            default:
-//                // По умолчанию возвращаем все задачи
-//                targetStatuses = Arrays.asList(TaskStatus.values());
-//                break;
-//        }
-//
-//        List<Task> tasks = taskRepository.findByEmployeeRecipientAndStatusIn(user.getEmployee(), targetStatuses).orElse(null);
-//
-//        return Optional.ofNullable(tasks).map(taskList ->
-//                taskList.stream()
-//                        .map(this::convertToTaskGetDTO)
-//                        .collect(Collectors.toList())
-//        );
-//    }
+       return Optional.ofNullable(tasks).map(tasksList -> tasksList.stream().map(this::convertToTaskGetDTO).collect(Collectors.toList()));
+    }
 
-//    @Transactional
-//    public Optional<List<Task>> getAllTasksForAdmin() {
-//        updateAllTaskStatus();
-//        return Optional.of(taskRepository.findAll());
-//    }
+    public Optional<Task> getTask(long id){
+        return taskRepository.findById(id);
+    }
 
-//    @Transactional
-//    public Optional<List<Task>> getCreatedTasks(Principal principal) {
-//        String phone = principal.getName();
-//        User user = userRepository.findByPhone(phone).orElse(null);
-//        updateAllTaskStatus();
-//
-//        return taskRepository.findByEmployeeProducer(user.getEmployee());
-//    }
+    @Transactional
+    public void deleteTask(long id){
+        taskRepository.delete(taskRepository.findById(id).get());
+    }
 
 
     @Transactional
@@ -125,24 +98,23 @@ public class TaskService {
         taskRepository.save(task);
     }
 
-//    @Transactional
-//    public void update(TaskDTO taskDTO, long id) {
-//        Task task = taskRepository.findById(id).get();
-//        BeanUtils.copyProperties(taskDTO, task, "id");
-////        task.setEmployee(userRepository.findById(taskDTO.getEmployeeId()).get().getEmployee());
-//        task.setEmployee(employeeRepository.findById(taskDTO.getEmployeeId()).get());
-//        taskRepository.save(task);
-//    }
+    @Transactional
+    public void update(TaskDTO taskDTO, long id) {
+        Task task = taskRepository.findById(id).get();
+        BeanUtils.copyProperties(taskDTO, task, "id");
+        task.setEmployeeRecipient(employeeRepository.findById(taskDTO.getRecipientId()).get());
+        taskRepository.save(task);
+    }
 
     @Transactional
     public void updateAllTaskStatus() {
         List<Task> allTasks = taskRepository.findAll();
         for (Task task : allTasks) {
-            if (task.getExpiryDate().isBefore(Instant.now()) && task.getStatus()!=TaskStatus.EXPIRED) {
+            if (task.getExpiryDate().isBefore(Instant.now()) && task.getStatus() != TaskStatus.EXPIRED) {
                 task.setStatus(TaskStatus.EXPIRED);
                 taskRepository.save(task);
             }
-            if(task.getExpiryDate().plus(Duration.ofDays(7)).isBefore(Instant.now())){
+            if (task.getExpiryDate().plus(Duration.ofDays(7)).isBefore(Instant.now())) {
                 taskRepository.delete(task);
             }
         }
@@ -157,18 +129,11 @@ public class TaskService {
         dto.setProducer(task.getEmployeeProducer().getUser().getFullName());
         return dto;
     }
+
+     @Transactional
+    public void updateStatus(@PathVariable long id, String status) {
+         Task task = taskRepository.findById(id).get();
+         task.setStatus(TaskStatus.valueOf(status.toUpperCase()));
+         taskRepository.save(task);
+    }
 }
-
-
-//    @Transactional
-//    public Optional<List<TaskGetDTO>> getAllTasksForUserCompleted(Principal principal) {
-//        String phone = principal.getName();
-//        User user = userRepository.findByPhone(phone).orElse(null);
-//        updateAllTaskStatus();
-//
-//        List<Task> tasks = taskRepository.findByEmployeeRecipientAndStatusIn(user.getEmployee(), List.of(TaskStatus.COMPLETED)).orElse(null);
-//        return Optional.of(tasks.stream()
-//                .map(this::convertToTaskGetDTO)
-//                .collect(Collectors.toList()));
-//
-//    }
